fix ordering test, add part of resources
