# docs/swagger.yaml
@@ -14,13 +14,6 @@ x-paginationOffset: &metaPaginationOffset
   schema:
     type: integer
     format: int32
-x-ordering: &metaOrdering
-  name: ordering
-  in: query
-  description: Order by a single field or by multiple fields separated by commas; field name preceded by "-" for descending order
-  required: false
-  schema:
-    type: string
 x-errorResponse:
   default: &metaErrorResponse
     description: unexpected error
@@ -395,7 +388,6 @@ paths:
       parameters:
         - *metaPaginationLimit
         - *metaPaginationOffset
-        - *metaOrdering
         - name: case
           in: query
           description: Case ID
